--- a/public/index.html
+++ b/public/index.html
@@ -203,8 +203,8 @@
 
       <div id="content">
         <div id="header">
-          <h1>Welcome aboard</h1>
-          <h2>You&rsquo;re riding Ruby on Rails!</h2>
+          <h1>Come cross the Bridge!</h1>
+          <h2>Take a ride on Ruby on Rails with us!</h2>
         </div>
 
         <div id="about">
