changed index page

--- a/public/index.html
+++ b/public/index.html
@@ -204,7 +204,7 @@
       <div id="content">
         <div id="header">
           <h1>Come cross the Bridge!</h1>
-          <h2>Ride Ruby on Rails!</h2>
+          <h2>Take a ride on Rails!</h2>
         </div>
 
         <div id="about">
